[gd_scene load_steps=17 format=3 uid="uid://oxwuywwu17bc"]

[ext_resource type="Script" path="res://levels_game_scenes/deck_of_arts.gd" id="1_5o0ex"]
[ext_resource type="Texture2D" uid="uid://ba84iyb0dv7gp" path="res://assets/GUI/swipe/new/1080x1920 拷贝 13.png" id="2_fv5cu"]
[ext_resource type="Texture2D" uid="uid://cdsyjjw2304gj" path="res://assets/GUI/deck_of_arts/04_preview pop up grid.png" id="2_y3twu"]
[ext_resource type="Script" path="res://levels_game_scenes/grid_view.gd" id="3_a0ghx"]
[ext_resource type="Texture2D" uid="uid://0h37hbi7j064" path="res://assets/GUI/deck_of_arts/03_BG.png" id="4_0wvoe"]
[ext_resource type="Texture2D" uid="uid://bxci0j3xhee25" path="res://assets/GUI/deck_of_arts/03_Grid icon.png" id="4_mw1v4"]
[ext_resource type="Texture2D" uid="uid://bwd017qtrn448" path="res://assets/GUI/deck_of_arts/03_X icon.png" id="4_rsv7c"]
[ext_resource type="StyleBox" uid="uid://cbf4grt4t42sg" path="res://Styling/new_style_box_bigger.tres" id="5_43ng3"]
[ext_resource type="Texture2D" uid="uid://kb5e4k5f4tct" path="res://assets/GUI/deck_of_arts/03_new route.png" id="6_fkf3p"]
[ext_resource type="Texture2D" uid="uid://c38ed2328w23g" path="res://assets/GUI/deck_of_arts/03_Text myDeck.png" id="7_cebgb"]
[ext_resource type="Texture2D" uid="uid://kiivhjr1fnt3" path="res://assets/GUI/card_unlock/B-Girls, Go! V2.png" id="11_ym8dx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tn5py"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6sgmi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ccspm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5gn85"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yd4mq"]

[node name="DeckOfArts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5o0ex")

[node name="GridView" type="TextureRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -899.585
offset_right = -539.585
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.666, 0.666)
mouse_filter = 0
texture = ExtResource("2_fv5cu")
script = ExtResource("3_a0ghx")

[node name="DeckView" type="Button" parent="GridView"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -72.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 46
text = "DECK VIEW"

[node name="TextureRect" type="TextureRect" parent="GridView"]
visible = false
self_modulate = Color(0, 0, 0, 1)
z_index = -5
layout_mode = 0
offset_left = 21.8994
offset_right = 1101.9
offset_bottom = 1920.0
mouse_filter = 2
texture = ExtResource("2_y3twu")

[node name="GoToCard" type="Button" parent="GridView"]
layout_mode = 0
offset_left = 72.9504
offset_top = 456.456
offset_right = 2120.95
offset_bottom = 2504.46
scale = Vector2(0.178, 0.178)
theme_override_styles/focus = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tn5py")
theme_override_styles/pressed_mirrored = ExtResource("5_43ng3")
theme_override_styles/pressed = ExtResource("5_43ng3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6sgmi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6sgmi")
icon = ExtResource("11_ym8dx")

[node name="BackToMain" type="Button" parent="."]
layout_mode = 0
offset_left = 599.0
offset_top = 64.0
offset_right = 671.0
offset_bottom = 136.0
scale = Vector2(0.666, 0.666)
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/pressed_mirrored = ExtResource("5_43ng3")
theme_override_styles/pressed = ExtResource("5_43ng3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ccspm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ccspm")
icon = ExtResource("4_rsv7c")

[node name="GridButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -130.0
offset_right = 167.0
offset_bottom = -45.0
grow_vertical = 0
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/pressed_mirrored = ExtResource("5_43ng3")
theme_override_styles/pressed = ExtResource("5_43ng3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_5gn85")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5gn85")
icon = ExtResource("4_mw1v4")

[node name="NewRoute" type="Button" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 1160.0
offset_right = 797.0
offset_bottom = 1233.0
scale = Vector2(0.666, 0.666)
theme_override_styles/focus = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/pressed_mirrored = ExtResource("5_43ng3")
theme_override_styles/pressed = ExtResource("5_43ng3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_yd4mq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yd4mq")
icon = ExtResource("6_fkf3p")

[node name="Background" type="TextureRect" parent="."]
z_index = -20
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.666, 0.666)
mouse_filter = 2
texture = ExtResource("4_0wvoe")

[node name="03TextMyDeck" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(277, 166)
scale = Vector2(0.666, 0.666)
texture = ExtResource("7_cebgb")
